Remove markup used for styling, replace with classes. Fix minor readability issue.

--- a/src/main.scss
+++ b/src/main.scss
@@ -78,3 +78,11 @@ ul {
 .warning p {
   margin: 0;
 }
+
+.text-small {
+  font-size: 1.5rem;
+}
+
+.text-bold {
+  font-weight: bold;
+}
